[package]
repository = "https://github.com/SuperInstance/bench-compare"
name = "bench-compare"
version = "0.1.0"
edition = "2021"
description = "Parse, compare, and track cargo benchmark results with regression detection"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
